--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^28.0.0",
+    "firebase": "^4.6.2",
+    "grpc": "^1.13.0-pre1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-youtube": "^1.1.0",
     "react-navigation": "^2.3.1"
   },
   "devDependencies": {
