--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-lifting-1x.png",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
