--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Lifting",
-    "description": "Please learn great skills.",
+    "description": "Please learn great soccer skills.",
     "slug": "soccer-training-mobile",
     "privacy": "public",
     "sdkVersion": "28.0.0",
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": true,
+      "bundleIdentifier": "com.lifting.ios"
+    },
+    "android": {
+      "package": "com.lifting.android"
+    },
   }
 }
