--- a/env.json.sample
+++ b/env.json.sample
@@ -4,5 +4,9 @@
   "FIREBASE_DB_URL": "",
   "FIREBASE_PROJECT_ID": "",
   "FIREBASE_STORAGE": "",
-  "FIREBASE_SENDER_ID": ""
+  "FIREBASE_SENDER_ID": "",
+  "ADMOB_ADUNITID": "",
+  "ADMOB_BANNER_ID": "",
+  "ADMOB_INTERSTITIAL_ID": "",
+  "ADMOB_REWARDED_ID": ""
 }
