--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "expo": "^28.0.0",
     "firebase": "^4.6.2",
     "grpc": "^1.13.0-pre1",
+    "npm": "^6.3.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-scrollable-tab-view": "^0.8.0",
