--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "expo": "^28.0.0",
     "firebase": "^4.6.2",
     "grpc": "^1.13.0-pre1",
