--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Lifting",
+    "name": "Soceer Hacker",
     "description": "Please learn great soccer skills.",
     "slug": "soccer-training-mobile",
     "privacy": "public",
@@ -8,9 +8,9 @@
     "platforms": ["ios", "android"],
     "version": "1.0.1",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/SoccerHackerIcon.png",
     "splash": {
-      "image": "./assets/splash-lifting-1x.png",
+      "image": "./assets/SoccerHackerSplash.png",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
