--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.1",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/SoccerHackerIcon.png",
     "splash": {
       "image": "./assets/SoccerHackerSplash.png",
