--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "npm": "^6.3.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-progress": "^3.5.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-vector-icons": "^4.6.0",
     "react-native-youtube": "^1.1.0",
