--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "expo": {
-    "name": "Soceer Hacker",
+    "name": "Soccer Hacker",
     "description": "Please learn great soccer skills.",
     "slug": "soccer-training-mobile",
     "privacy": "public",
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.4.3",
+    "version": "1.4.7",
     "orientation": "default",
+    "primaryColor": "#1C86A9",
     "icon": "./assets/SoccerHackerIcon144-ios.png",
     "splash": {
       "image": "./assets/SoccerHackerSplash.png",
@@ -26,7 +27,7 @@
     },
     "android": {
       "package": "com.lifting.android",
-      "versionCode": 7,
+      "versionCode": 11,
       "icon": "./assets/SoccerHackerIcon144-android.png"
     },
   }
