--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-progress": "^3.5.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
