--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "privacy": "public",
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.5.5",
+    "version": "1.5.7",
     "orientation": "default",
     "primaryColor": "#1C86A9",
     "icon": "./assets/SoccerHackerIcon144-ios.png",
@@ -27,7 +27,8 @@
     },
     "android": {
       "package": "com.lifting.android",
-      "versionCode": 19,
+      "versionCode": 21,
+      "googleServicesFile": "./google-services.json",
       "icon": "./assets/SoccerHackerIcon144-android.png"
     },
   }
