--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "privacy": "public",
     "sdkVersion": "28.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.5.7",
+    "version": "1.5.8",
     "orientation": "default",
     "primaryColor": "#1C86A9",
     "icon": "./assets/SoccerHackerIcon144-ios.png",
@@ -23,11 +23,14 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.lifting.ios"
+      "bundleIdentifier": "com.lifting.ios",
+      "infoPlist": {
+        "CFBundleDisplayName": "Soccer Hacker"
+      }
     },
     "android": {
       "package": "com.lifting.android",
-      "versionCode": 21,
+      "versionCode": 22,
       "googleServicesFile": "./google-services.json",
       "icon": "./assets/SoccerHackerIcon144-android.png"
     },
