--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "description": "Please learn great soccer skills.",
     "slug": "soccer-training-mobile",
     "privacy": "public",
-    "sdkVersion": "28.0.0",
+    "sdkVersion": "32.0.0",
     "platforms": ["ios", "android"],
-    "version": "1.5.8",
+    "version": "1.6.0",
     "orientation": "default",
     "primaryColor": "#1C86A9",
     "icon": "./assets/SoccerHackerIcon144-ios.png",
@@ -30,9 +30,14 @@
     },
     "android": {
       "package": "com.lifting.android",
-      "versionCode": 22,
+      "versionCode": 27,
       "googleServicesFile": "./google-services.json",
-      "icon": "./assets/SoccerHackerIcon144-android.png"
+      "icon": "./assets/SoccerHackerIcon144-android.png",
+      "permissions": [
+        "NOTIFICATIONS",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ]
     },
   }
 }
